Fix overlapping parallax in home page

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -401,7 +401,7 @@ header .download .btn-light:hover {
   width: 100%;
   top:0;
   left: 0;
-  z-index: 100;
+  z-index: 99 !important;
 }
 #header {
   padding: 100px 200px 0px 200px;
